[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/chest.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Chest.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "closed",
"speed": 1.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "opened",
"speed": 1.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "opening",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 30.5143, 26.646 )

[node name="Chest" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.5 )
frames = SubResource( 11 )
animation = "closed"
playing = true

[node name="Area" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Area"]
position = Vector2( 0, 1.25992 )
shape = SubResource( 12 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
